# autoresearch-trade-bot

./: .gitignore  AGENTS.md  README.md  prepare.py  program.md  pyproject.toml  render.yaml  setup.py  train.py
docs/: repo-map.md  research-memory.md  v1-architecture.md
src/autoresearch_trade_bot/: __init__.py  app.py  autoresearch.py  binance.py  bybit.py  cli.py  config.py  crypto_import.py  dashboard.py  data.py  datasets.py  experiments.py  family_wave.py  history_dataset_install.py  history_refresh.py  llm_worker.py  models.py  mutations.py  research.py  risk.py  rollout.py  sample_data.py  service_runner.py  simulator.py  state.py  storage.py  strategy.py  strategy_families.py  validation.py  worker.py
status/: latest_status.json  leaderboard.json
status/ema_trend/: latest_status.json  leaderboard.json
status/main/: latest_status.json  leaderboard.json
status/mean_reversion/: latest_status.json  leaderboard.json
status/volatility_breakout/: latest_status.json  leaderboard.json
tests/: test_app.py  test_autoresearch.py  test_binance.py  test_bybit.py  test_crypto_import.py  test_dashboard.py  test_data_pipeline.py  test_experiments.py  test_family_wave.py  test_history_dataset_install.py  test_history_refresh.py  test_llm_worker.py  test_mutations.py  test_research.py  test_risk.py  test_simulator.py  test_state.py  test_worker.py
