[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-trade-bot"
version = "0.1.0"
description = "Agentic research kernel for crypto trading strategies."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=18,<20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
